--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#board {
+  width: 98vw;
+  height: 98vh;
+  margin: 0 auto;
+  background-image: url('cork_background.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+  border: 10px ridge grey;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid black;
+  border-radius: 2px;
+  box-shadow: #ffd 3px 3px;
+  background-color: #ffc;
+  margin: 4px;
+  font-size: 28px;
+  font-weight: 700;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#button:hover {
+  
+}
+
+#container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.note {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
+  min-width: 9em;
+  min-height: 9em;
+  max-width: 20vw;
+  max-height: 70vh;
+  background-color: #ffc;
+  margin: 0.5em;
+  padding: 1em;
+  font-family: 'Caveat', cursive;
+  box-shadow: 5px 5px 7px rgba(33, 33, 33, .7);
+  transform: rotate(-3deg);
 }
 
-.App-link {
-  color: #61dafb;
+.note:nth-child(even) a{
+  transform:rotate(4deg);
+  top: 5px;
+  background-color:#cfc;
+  font-family: 'Dancing Script', cursive;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.note:nth-child(3n) a{
+  transform: rotate(2deg);
+  position: relative;
+  top: -5px;
+  background-color: #fcf;
+  font-family: 'Square Peg', cursive;
 }
+
+.note:nth-child(4n) a{
+  transform:rotate(-4deg);
+  position:relative;
+  top:-10px;
+  background-color: #cff;
+}
+.note:hover,.note:active {
+  transform: scale(125%);
+  z-index: 4;
+}
+
+h2 {
+  font-size: 30px;
+  padding: 3px;
+}
+
+p {
+  font-size: 20px;
+}
+
+.bin {
+  position: absolute;
+  top: 5px;
+  right: 5px;  
+}
+/*
+🗑️
+font-family: 'Caveat', cursive;
+font-family: 'Dancing Script', cursive;
+font-family: 'Square Peg', cursive;
+*/
